jvimalprasathdev/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Home Equity</fullName>
        <description>Home Equity Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>App Submitted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In App</fullName>
        <description>Sales Process for In App</description>
        <isActive>true</isActive>
        <values>
            <fullName>App Submitted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Originations</fullName>
        <description>Sales process for Originations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Home_Phone__c</fullName>
        <formula>Account.PersonHomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Homeowner_s_Association_Dues__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Annual Homeowner&apos;s Association Dues</description>
        <inlineHelpText>Please enter the annual amount of the Homeowner&apos;s Association Dues</inlineHelpText>
        <label>Annual Homeowner&apos;s Association Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Homeowner_s_Insurance__c</fullName>
        <description>Annual Homeowner&apos;s Insurance Premiums</description>
        <inlineHelpText>Enter the annual amount of the Homeowner&apos;s Insurance Premiums.</inlineHelpText>
        <label>Annual Homeowner&apos;s Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Real_Estate_Taxes__c</fullName>
        <description>Annual Real Estate Taxes due</description>
        <inlineHelpText>Please enter the assessed Annual Real Estate Taxes</inlineHelpText>
        <label>Annual Real Estate Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <description>Type of applicant</description>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Individuals (Not Married)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than Two Individuals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Sources__c</fullName>
        <label>Channel Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Values__c</fullName>
        <label>Channel Values</label>
        <picklist>
            <controllingField>Channel_Sources__c</controllingField>
            <picklistValues>
                <fullName>Bankrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo/Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Builder Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention - Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention - Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loans Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail MC Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>This is the channel from which the lead was generated</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Lending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Scheduled Closing Date from OPUS</description>
        <label>Scheduled Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Fees__c</fullName>
        <label>Closing Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coborrower_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Coborrower Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Account.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empower_Lead_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the lead number from Empower.  This is both Unique and an External ID</description>
        <externalId>true</externalId>
        <label>OPUS ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <description>Field reflects the value from Standard Forecast Category pick list.</description>
        <formula>TEXT(ForecastCategoryName)</formula>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLR_Lead_ID__c</fullName>
        <label>HLR Lead ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <formula>If (Related_Lead__c == null,  Opportunity_Number__c ,Related_Lead__r.Salesforce_Lead_Number__c )</formula>
        <label>Lead Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Created_Timestamp__c</fullName>
        <formula>IF(  Related_Lead__c &lt;&gt; null ,  Related_Lead__r.Create_Timestamp__c ,  Created_Timestamp__c )</formula>
        <label>Lead/Opp Created Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <picklist>
            <controllingField>Loan_Type__c</controllingField>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash-out Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streamline Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRRRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate &amp; Term Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL - 1st Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL - 2nd Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC - 1st Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC - 2nd Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Contacted / Follow Up Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request For Prequal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / No Product Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / Went with another Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Application Taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Offer Not Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Closed/Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / Still Deciding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / Appointment Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / Customer Rate Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted / Property Type Not Offered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_To_Value__c</fullName>
        <formula>if( and( Requested_Loan_Amount__c &gt; 0, Value_of_Home__c &gt; 0 ), Requested_Loan_Amount__c /  Value_of_Home__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan-To-Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Account.PersonMobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_Code__c</fullName>
        <label>Occupancy Code</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Generates Auto generated Opp Number.</description>
        <displayFormat>O{000000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_EID__c</fullName>
        <label>Opportunity Owner EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Preferences__c</fullName>
        <label>Product Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>5/1 Adjustable Rate Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/1 Adjustable Rate Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Year Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Year Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <description>First line of property address.</description>
        <label>Property Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <description>Line 2 of property address</description>
        <label>Property Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Apt__c</fullName>
        <description>Apartment number of Property</description>
        <label>Property Apt#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Property Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_House__c</fullName>
        <label>Property House#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFR Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFR Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Rise (1-4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rise (5-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Rise (9+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Postal_Code__c</fullName>
        <label>Property Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Lock_Exp__c</fullName>
        <description>Rate Lock expiration date from OPUS</description>
        <label>Rate Lock Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shopping_Stage__c</fullName>
        <label>When do you intend to apply?</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_to_HLR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer to HLR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_of_Home__c</fullName>
        <description>Estimated Property Value</description>
        <label>Estimated Property Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_this_be_a_joint_application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will this be a joint application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>calculated_Channel__c</fullName>
        <formula>IF( ISPICKVAL(Channel__c, &quot;Centralized Retail&quot;) , &quot;Centralized Retail&quot;, 
IF( ISPICKVAL(Channel__c, &quot;Neighborhood Lending&quot;), &quot;Neighborhood Lending&quot;, 
IF( ISPICKVAL(Channel__c, &quot;Distributed Retail&quot;), &quot;Distributed Retail&quot;, 
IF( ISPICKVAL(Channel__c, &quot;Home Equity&quot;), &quot;Home Equity&quot;, 
&quot;&quot; ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>calculated Channel</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Empower_Lead_ID__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Pipeline</label>
    </listViews>
    <listViews>
        <fullName>My_Loans</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Loan_Purpose__c</columns>
        <columns>Channel_Sources__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Loan_Status__c</columns>
        <columns>Property_State__c</columns>
        <columns>Empower_Lead_ID__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Empower_Lead_ID__c</field>
            <operation>startsWith</operation>
            <value>E</value>
        </filters>
        <label>My Loans</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Loan_Purpose__c</columns>
        <columns>Channel_Sources__c</columns>
        <columns>Loan_Status__c</columns>
        <columns>Property_State__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Empower_Lead_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Empower_Lead_ID__c</field>
            <operation>startsWith</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>Empower_Lead_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Team Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Loans</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Loan_Purpose__c</columns>
        <columns>Channel_Sources__c</columns>
        <columns>Loan_Status__c</columns>
        <columns>Property_State__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Empower_Lead_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Empower_Lead_ID__c</field>
            <operation>startsWith</operation>
            <value>E</value>
        </filters>
        <label>My Team Loans</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>HLR</fullName>
        <active>true</active>
        <businessProcess>Originations</businessProcess>
        <description>HLR Record Type in Opportunities</description>
        <label>HLR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Equity</fullName>
        <active>true</active>
        <businessProcess>Home Equity</businessProcess>
        <description>Home Equity Opportunity Record Type</description>
        <label>Home Equity</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_App</fullName>
        <active>true</active>
        <businessProcess>In App</businessProcess>
        <description>In App Record Type</description>
        <label>In App</label>
    </recordTypes>
    <recordTypes>
        <fullName>Originations</fullName>
        <active>true</active>
        <businessProcess>Originations</businessProcess>
        <description>Originations Opportunity Record Type</description>
        <label>Originations</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Stage_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>The status of the Opportunity Cannot be changed when it is in In App record type</description>
        <errorConditionFormula>AND(($RecordType.Name = &quot;In App&quot;),ISCHANGED(StageName))</errorConditionFormula>
        <errorMessage>Stage will be automatically changed via your Status selection and cannot be manually changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Cannot_Be_Changed_In_The_In_App</fullName>
        <active>true</active>
        <description>The status of the Opportunity Cannot be changed when it is in In App record type</description>
        <errorConditionFormula>AND(($RecordType.Name = &quot;In App&quot; ),ISCHANGED(StageName))</errorConditionFormula>
        <errorMessage>Stage cannot be changed</errorMessage>
    </validationRules>
</CustomObject>